--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -41,3 +41,36 @@ jobs:
           push: true
           tags: |
             ghcr.io/ivannovr/pterodactyl-images:java_${{ matrix.tag }}
+  push-ca:
+    name: "pterodactyl-images:java_${{ matrix.tag }}-ca"
+    runs-on: ubuntu-latest
+    needs: push
+    strategy:
+      fail-fast: false
+      matrix:
+        tag:
+          - 8
+          - 11
+          - 17
+          - 21
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+        with:
+            image: tonistiigi/binfmt:qemu-v7.0.0-28
+      - uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-flags: --debug
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v4
+        with:
+          context: ./java
+          file: ./java/${{ matrix.tag }}-ca/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/ivannovr/pterodactyl-images:java_${{ matrix.tag }}-ca
