Fix CA images build: use repo root context for certs

--- a/java/21-ca/Dockerfile
+++ b/java/21-ca/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghcr.io/ivannovr/pterodactyl-images:java_21
 
-COPY ../certs/*.crt /usr/local/share/ca-certificates/
+COPY certs/*.crt /usr/local/share/ca-certificates/
 
 RUN update-ca-certificates
 
