--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -68,7 +68,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v4
         with:
-          context: ./java
+          context: .
           file: ./java/${{ matrix.tag }}-ca/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
